# Amarelo-Keys

./: .gitignore  Makefile  README.md  RELATORIO_DEPURACAO.txt  SPEC.md  TESTING.md  amarelo-keys-launcher  amarelo_keys.py  auto_test.py  create_icon.py  install.py  install.sh  main.py  pyproject.toml  teste_overlay.py
data/: amarelo-keys.desktop  autostart.desktop
deb_build/amarelo-keys_1.0.0_all/DEBIAN/: control  postinst
deb_build/amarelo-keys_1.0.0_all/usr/share/amarelo-keys/: amarelo_keys.py  installer.py  main.py  requirements.txt
deb_build/amarelo-keys_1.0.0_all/usr/share/applications/: amarelo-keys.desktop
deb_build/amarelo-keys_1.0.1_all/DEBIAN/: control  postinst  prerm
deb_build/amarelo-keys_1.0.1_all/usr/share/applications/: amarelo-keys.desktop
debian/amarelo-keys/DEBIAN/: control  postinst  prerm
debian/amarelo-keys/usr/share/amarelo-keys/: amarelo_keys.py  main.py
debian/amarelo-keys/usr/share/applications/: amarelo-keys.desktop
roberto/.config/amarelo-keys/: config.json
roberto/.config/autostart/: amarelo-keys.desktop
src/amarelo_keys/: __main__.py  config.py  daemon.py  gui.py  main.py
